# Python-Test-Code

./: .replit  01-Bifurction  Diagramme.py  01-Bifurction  Diagramme_v1.py  01A - Biforcation Recursion.py  02-Logistic Curve.py  03-Golden_Ratio.py  04-Euler's Constant .py  04-Euler's Constant Series.py  04_Euler's_Optimized  05-Fourier Series.py  05-Fourier Series_Step_Funtion_2.py  06-Fourier_Transform.py  06-Spectrogram.py  06-Wavelets.py  06_Scanogram.py  06_Spectrogram_2.py  07-logisticCurve.csv  07-ogistic Curve for R Values.py  08-LyapunovLogistic.py  09-Pi Gordon.py  100- QF-H-Model.py  100-finance_H Model.py  101-FinanceGordonGrowthModel-Uniform_Distrib.py  101-QF-Gordon-Model.py  101-QF-Gordon-Model2.py  102-FinanceNormalDistribution.py  102-QF-3-Stage-Model.py  103-QF-DAX-Distrib.py  104-Major-Stock-Indicies.py  105_Wavelets_Finance.py  11-Taylors Serires - Sine.py  11-Taylors Serires-e.py  12-PDE - The Heat Equation.py  15-SineCosineWaves.py  16-SimpleHarmonicEquation.py  17-SimpleHarmonicEquation-Int2ndOrderODEs.py  18-SimpleHarmonicEquation-Int2ndOrderEq1.py  19-SimpleHarmonicEquation-Int2ndOrderEq2.py  20-SimpleHarmonicEquatio-Int2ndOrder Eq3.py  21-SIR Model.py  (+55 more)
